switched to Java 8 because no Java 9 syntax was used and the Gradle plugin for Java 9 is ugly