@@ -1,6 +1,3 @@
-plugins {
-    id 'java-library'
-}
 
 group 'com.jp'
 version '1.0-SNAPSHOT'
@@ -17,48 +14,14 @@ dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.3'
 }
 
-
-
-ext.moduleName = 'com.jp'
-
-afterEvaluate {
-    repositories {
-        jcenter()
-    }
-
-    compileJava {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = [
-                    '--module-path', classpath.asPath,
-            ]
-            classpath = files()
-        }
-    }
-
-    compileTestJava {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = [
-                    '--module-path', classpath.asPath,
-                    '--add-modules', 'org.junit.jupiter.engine',
-                    '--add-reads', "$moduleName=org.junit.jupiter.engine",
-                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-            ]
-            classpath = files()
-        }
-    }
-
-    test {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            jvmArgs = [
-                    '--module-path', classpath.asPath,
-                    '--add-modules', 'ALL-MODULE-PATH',
-                    '--add-reads', "$moduleName=org.junit.jupiter.engine",
-                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-            ]
-            classpath = files()
-        }
+jar {
+    manifest {
+        attributes(
+                "Created-By": System.getProperty('java.version'),
+                "Specification-Title": "Java Sample for using JUnit 5",
+                "Main-Class": "com.jp.application",
+                "Implementation-Version": version,
+                "Class-Path": configurations.compile.collect { it.getName() }.join(' ')
+        )
     }
 }
